# gtkmm_book_cmake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
aspectframe/: CMakeLists.txt  examplewindow.cc  examplewindow.h
buildapp/example_app/: CMakeLists.txt  exampleapplication.cc  exampleapplication.h  exampleappprefs.cc  exampleappprefs.h  exampleappwindow.cc  exampleappwindow.h  main.cc
cmake/: AddGtkmmApp.cmake  ClangTools.cmake
entry/: CMakeLists.txt
entry/completion/: CMakeLists.txt  examplewindow.cc  examplewindow.h
entry/icon/: CMakeLists.txt  examplewindow.cc  examplewindow.h  main.cc
entry/progress/: CMakeLists.txt  examplewindow.cc  examplewindow.h
entry/simple/: CMakeLists.txt  examplewindow.cc  examplewindow.h
glarea/: CMakeLists.txt  colors.h  exampleglarea.cc  exampleglarea.h  examplewindow.cc  examplewindow.h  main.cc
menus/: CMakeLists.txt
menus/main_menu/: CMakeLists.txt  exampleapplication.cc  exampleapplication.h  examplewindow.cc  examplewindow.h  main.cc
menus/popup/: CMakeLists.txt  examplewindow.cc  examplewindow.h  main.cc
menus_and_toolbars/: CMakeLists.txt  examplewindow.cc  examplewindow.h  main.cc
menus_and_toolbars/toolbar/: toolbar.gresource4.xml  toolbar4.ui
scrolledwindow/: CMakeLists.txt  examplewindow.cc  examplewindow.h
spinbutton/: CMakeLists.txt  examplewindow.cc  examplewindow.h
toolbar/: CMakeLists.txt  examplewindow.cc  examplewindow.h
